Fix album page layout, boldify event titles, fix some overall wrapper padding issues so spacing is consistent.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -127,7 +127,7 @@ a:active {
 h1 {
     font-family: 'Roboto Slab', Georgia, serif;
     font-size: 24px;
-    font-weight: 100;
+    font-weight: 300;
     color: #2e2e2e;
     margin-top: 0;
 }
@@ -140,9 +140,14 @@ h2 {
     text-align: center;
 }
 
-.content h2 { text-align: left; }
+.content h2 {
+    text-align: left;
+    margin-top: 0;
+    line-height: normal;
+    margin-bottom: 40px;
+}
+
 .post h1 {
-    margin-top: 30px;
     margin-bottom: 0;
 }
 
@@ -356,8 +361,9 @@ nav.pagination span {
 
 .content {
     width: 650px;
-    padding: 50px 0 30px 100px;
+    padding: 70px 0 75px 100px;
     line-height: 32px;
+    overflow: hidden;
 }
 
 .content p {
@@ -400,7 +406,7 @@ nav.pagination span {
 
 .take-note {
     background: #eeefdb;
-    padding-top: 60px;
+    padding-top: 70px;
     padding-bottom: 10px;
 }
 
@@ -443,6 +449,7 @@ nav.pagination span {
     background: image-url('deco-bird.jpg') no-repeat bottom center;
     padding-bottom: 40px;
     margin-bottom: 30px;
+    margin-top: 0;
 }
 
 footer {
@@ -464,8 +471,39 @@ ul.collaborators {
     list-style: none;
 }
 
+.collaborators li p {
+    margin-top: 0;
+}
+
 .mailing-list {
 
+}
+
+.album {
+    overflow: hidden;
+}
+
+.album-image {
+    float: left;
+    width: 300px;
+    padding-top: 10px;
+}
+
+.album-right {
+    float: left;
+    margin-left: 40px;
+    width: 310px;
+}
+
+.album-right p {
+    margin-top: 0;
+}
+
+.album-right ul {
+    list-style-type: disc;
+    padding-top: 0;
+    padding-left: 20px;
+    color: #cccccc;
 }
 
 /* ==========================================================================
